--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								<!-- <p>An electrician a phone call away (with coc certificate) we do all electrical related problems  <a href="http://frehtml5.co/" target="_blank" class="fh5co-site-name">FreeHTML5.co</a></p>
 								<p><a class="btn btn-primary btn-lg" href="#">Get Started/a></p> -->
 									<br>
-								<p><a class="btn btn-primary btn-lg" href="#fh5co-header-section">Get Started</a></p> 
+								<p><a class="btn btn-primary btn-lg" href="#fh5co-feature-product">Get Started</a></p> 
 							</div>
 						</div>
 					</div>
